# Grism

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  concat-specs.sh  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
_milestones/: 3_dev_schedule.md  5_phase_one_milestone.md  7_local_engine_milestone.md  8_bridge_distributed_impl.md
_workdir/: progress-2026-01-22-001.md  progress-2026-01-22-002.md  progress-2026-01-22-004.md  progress-2026-01-22-005.md  progress-2026-01-22-006.md  progress-2026-01-22-008.md  progress-2026-01-22-009.md  progress-2026-01-22-011.md  progress-2026-01-22-012.md  progress-2026-01-22-013.md  progress-2026-01-22-014.md  progress-2026-01-23-001.md  progress-2026-01-23-007.md
_worklog/: progress-2026-01-21-001.md  progress-2026-01-21-002.md  progress-2026-01-21-003.md  progress-2026-01-22-003.md  progress-2026-01-22-007.md  progress-2026-01-22-010.md  progress-2026-01-23-002.md  progress-2026-01-23-003.md  progress-2026-01-23-004.md  progress-2026-01-23-005.md  progress-2026-01-23-006.md
bench/: cypher_queries_part1.txt  grism_queries_complex.py  grism_queries_part1.py  load_data.py  run_logical_benchmark.py  run_queries_complex_runner.py  run_queries_part1.sh  run_queries_part1_runner.py
grism/: __init__.py  _grism.pyi
references/: 9_storage_engine_milestone.md
specs/: 1_arch_design_v1.md  2_python_api_contract_v0.1.md  2_python_api_v0.1.md  4_logical_planner_impl.md  6_physical_planning_impl.md  8_bridge_distributed_impl.md  rfc-0001.md  rfc-0002.md  rfc-0003.md  rfc-0006.md  rfc-0007.md  rfc-0008.md  rfc-0009.md  rfc-0010.md  rfc-0011.md  rfc-0012.md  rfc-0013.md  rfc-0014.md  rfc-0015.md  rfc-0016.md  rfc-0017.md  rfc-0018.md  rfc-0019.md  rfc-0020.md  rfc-0021.md  rfc-0022.md  rfc-0023.md  rfc-0024.md  rfc-0100.md  rfc-0101.md  rfc-0102.md  rfc-0103.md  rfc-history.md  rfc-index.md  rfc-namings.md  rfc-standard.md
src/: hypergraph.rs  lib.rs
src/common/config/: Cargo.toml
src/common/config/src/: lib.rs  python.rs
src/common/config/tests/: config_tests.rs
src/common/display/: Cargo.toml
src/common/display/src/: lib.rs  tree.rs
src/common/error/: Cargo.toml
src/common/error/src/: error.rs  lib.rs  python.rs
src/common/runtime/: Cargo.toml
src/common/runtime/src/: lib.rs
src/grism-core/: Cargo.toml
src/grism-core/proptest-regressions/: proptest_utils.txt
src/grism-core/src/: lib.rs  proptest_utils.rs  testing.rs
src/grism-core/src/hypergraph/: container.rs  edge.rs  hyperedge.rs  identifiers.rs  mod.rs  node.rs  properties.rs
src/grism-core/src/schema/: column_ref.rs  entity.rs  mod.rs  schema.rs  schema_impl.rs
src/grism-core/src/types/: data_type.rs  mod.rs  spec.rs  value.rs
src/grism-core/tests/: integration_tests.rs
src/grism-distributed/: Cargo.toml
src/grism-distributed/src/: lib.rs
src/grism-distributed/src/planner/: mod.rs  stage.rs
src/grism-distributed/src/transport/: ipc.rs
src/grism-distributed/src/worker/: task.rs
src/grism-engine/: Cargo.toml
src/grism-engine/src/: executor.rs  lib.rs  node.rs  result.rs
src/grism-engine/src/executor/: context.rs  local.rs  mod.rs  result.rs  traits.rs
src/grism-engine/src/expr/: evaluator.rs  mod.rs
src/grism-engine/src/memory/: manager.rs  mod.rs
src/grism-engine/src/metrics/: mod.rs
src/grism-engine/src/operators/: aggregate.rs  collect.rs  empty.rs  expand.rs  filter.rs  limit.rs  mod.rs  project.rs  rename.rs  scan.rs  sort.rs  traits.rs  union.rs
src/grism-engine/src/physical/: mod.rs  plan.rs  properties.rs  schema.rs
src/grism-engine/src/planner/: local.rs  mod.rs  schema_inference.rs
src/grism-engine/src/python/: mod.rs
src/grism-engine/tests/: integration.rs  unit_tests.rs
src/grism-logical/: Cargo.toml
src/grism-logical/src/: lib.rs  plan.rs  schema_inference.rs
src/grism-logical/src/expr/: agg.rs  binary.rs  expr.rs  expression.rs  func.rs  mod.rs  unary.rs
src/grism-logical/src/ops/: aggregate.rs  expand.rs  filter.rs  infer.rs  limit.rs  mod.rs  project.rs  rename.rs  scan.rs  sort.rs  union.rs
src/grism-logical/src/python/: mod.rs
src/grism-logical/src/validation/: mod.rs  semantic.rs  structural.rs
src/grism-optimizer/: Cargo.toml
src/grism-optimizer/src/: lib.rs
src/grism-optimizer/src/rules/: constant_folding.rs  expand_reordering.rs  filter_expand_fusion.rs  mod.rs  optimizer.rs  predicate_pushdown.rs  projection_pruning.rs  projection_pushdown.rs  rule.rs
src/grism-playground/: Cargo.toml
src/grism-playground/src/: data.rs  lib.rs  utils.rs
src/grism-ray/: Cargo.toml
src/grism-ray/src/: exchange.rs  executor.rs  lib.rs  partitioning.rs
src/grism-ray/src/planner/: mod.rs  stage.rs
src/grism-ray/src/transport/: mod.rs
src/grism-ray/src/worker/: mod.rs  task.rs
src/grism-storage/: Cargo.toml
src/grism-storage/src/: catalog.rs  lib.rs  provider.rs  snapshot.rs  storage.rs  stream.rs  types.rs
src/grism-storage/src/lance/: layout.rs  mod.rs  snapshot_index.rs  storage.rs
src/grism-storage/src/memory/: mod.rs  storage.rs  stores.rs  test_utils.rs
src/grism-storage/tests/: integration_lance.rs  integration_memory.rs
src/python/: executor.rs  expressions.rs  hypergraph.rs  mod.rs
tests/: __init__.py  conftest.py  test_expressions.py  test_hypergraph.py  test_transactions.py
tests/logical_plans/: __init__.py  test_aggregation_patterns.py  test_complex_patterns.py  test_expand_patterns.py  test_filter_patterns.py  test_projection_patterns.py  test_scan_patterns.py
