[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "grism"
version = "0.1.0"
description = "AI-native neurosymbolic hypergraph database system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Grism Team" }
]
keywords = ["graph", "hypergraph", "database", "ai", "neurosymbolic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
arrow = ["pyarrow>=14.0"]
all = ["pandas>=2.0", "polars>=0.20", "pyarrow>=14.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/mirasoth/Grism"
Documentation = "https://github.com/mirasoth/Grism#readme"
Repository = "https://github.com/mirasoth/Grism"
Issues = "https://github.com/mirasoth/Grism/issues"

[tool.maturin]
# Build with Python feature enabled
features = ["python"]
# Python source directory
python-source = "grism"
# Module name matches the Rust crate
module-name = "grism._grism"
# Manifest path
manifest-path = "Cargo.toml"
# Strip debug symbols in release
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["grism"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
