[package]
name = "grism-core"
edition = { workspace = true }
version = { workspace = true }
description = "Core data model for Grism hypergraph database"

[dependencies]
common-error = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
hashbrown = { workspace = true }
uuid = { workspace = true }
pyo3 = { workspace = true, optional = true }

# Arrow ecosystem for columnar data
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]

[lints]
workspace = true
