[package]
name = "grism-distributed"
edition = { workspace = true }
version = { workspace = true }
description = "Ray distributed execution backend for Grism"

[dependencies]
common-error = { workspace = true }
common-runtime = { workspace = true }
grism-core = { workspace = true }
grism-logical = { workspace = true }
grism-engine = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
arrow-ipc = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["dep:pyo3", "grism-core/python", "grism-logical/python", "grism-engine/python"]

[lints]
workspace = true
