[package]
name = "grism-playground"
edition = { workspace = true }
version = { workspace = true }
description = "Grism playground for experiments and examples"

[[bin]]
name = "hypergraph-demo"
path = "src/bin/hypergraph_demo.rs"

[[bin]]
name = "query-runner"
path = "src/bin/query_runner.rs"

[dependencies]
# Internal crates
common-error = { workspace = true }
common-runtime = { workspace = true }
grism-core = { workspace = true }
grism-logical = { workspace = true }
grism-optimizer = { workspace = true }
grism-engine = { workspace = true }
grism-ray = { workspace = true }
grism-storage = { workspace = true, features = ["test-utils"] }

# Arrow ecosystem
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true
