[package]
name = "common-error"
edition = { workspace = true }
version = { workspace = true }
description = "Error types and result aliases for Grism"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow-schema = { workspace = true }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["dep:pyo3"]

[lints]
workspace = true
